--- a/recs.tex
+++ b/recs.tex
@@ -82,7 +82,7 @@
 
 \title{Economics}
 \author{Dyrehaugen Web Notebook}
-\date{2022-06-30}
+\date{2022-07-01}
 
 \begin{document}
 \maketitle
@@ -3672,8 +3672,14 @@ against historical cases.
 Is the Phillips curve dead? If so, who killed it? Conventional wisdom has it that the sound monetary policy since the 1980s not only conquered the Great Inflation, but also buried the Phillips curve itself. This paper provides an alternative explanation: labor market policies that have eroded worker bargaining power might have been the source of the demise of the Phillips curve. We develop what we call the ``Kaleckian Phillips curve'', the slope of which is determined by the bargaining power of trade unions. We show that a nearly 90 percent reduction in inflation volatility is possible even without any changes in monetary policy when the economy transitions from equal shares of power between workers and firms to a new balance in which firms dominate. In addition, we show that the decline of trade union power reduces the share of monopoly rents appropriated by workers, and thus helps explain the secular decline of labor share, and the rise of profit share. We provide time series and cross sectional evidence.
 
 \href{https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4118173}{Ratner (2022) Who killed the Phillips Curve}
-\href{Ratner_2019_Who_killed_the_Phillips_Curve.pdf}{(pdf)}
-\href{Ratner_2019_Who_killed_the_Phillips_Curve_Slides.pdf}{(pdf Slides)}
+\href{pdf/Ratner_2019_Who_killed_the_Phillips_Curve.pdf}{(pdf)}
+\href{pdf/Ratner_2019_Who_killed_the_Phillips_Curve_Slides.pdf}{(pdf Slides)}
+
+\emph{Seccareccia on Rattner}
+
+A repeat of the anti-inflation policy scenario of the early 1980s of sharply raising central bank interest rates might prove inappropriate, if not catastrophic, as solution to dealing with the current inflationary environment.
+
+\href{https://www.ineteconomics.org/perspectives/blog/the-fed-tackles-kalecki}{Seccareccia (2022) The Fed Tackles Kalecki}
 
 \hypertarget{productivity}{%
 \chapter{Productivity}\label{productivity}}
@@ -6685,6 +6691,29 @@ In the 1990s, you didn't need to be a naive exponent of the post-Cold War end-of
 
 \href{https://foreignpolicy.com/2021/04/01/janet-yellen-mario-draghi-italy-united-states-technocrats-capitalist-democracy/}{Tooze (2021) Draghi/Yellen - Can they control what comes next?}
 
+\hypertarget{industrial-policy}{%
+\section{Industrial Policy}\label{industrial-policy}}
+
+\emph{Ha-Joon Chang}
+
+Industrial policy can work -- sometimes spectacularly well -- although it can also fail --
+sometimes miserably.
+
+Picking on my emphasis on the importance
+of export performance as a performance indicator, I then talked about the critical importance
+of export policy, which requires not just free trade but a mixture of free trade, export
+promotion, and infant industry protection.
+
+The debate, have focused too much on ``grand'' things like the
+Big Push, when much of real-life industrial policy has been about ``boring'' things, like
+getting the production scale right and providing export marketing services.
+
+Appreciate how critical
+export is for the success of industrial policy, while {[}also{]} appreciate
+how export success also requires industrial policy.
+
+\href{pdf/Chang_2009_Industrial_Policy_Confrontation.pdf}{Ha-Joon Chang (2009) Industrial Policy: Can We Go Beyond an Unproductive Confrontation? (pdf)}
+
 \hypertarget{techfare}{%
 \section{TechFare}\label{techfare}}
 
@@ -6839,6 +6868,15 @@ lines. R2\_adj is the coefficient of determination, adjusted for the number of p
 
 \begin{quote}
 GDP is insufficient as a measure to capture what is essential about the economy.
+\end{quote}
+
+\begin{quote}
+All of GDP is not created equal. Some output in the economy is more important, more fundamental to how the economy functions than other output.
+\end{quote}
+
+\begin{quote}
+Simply put, Russia makes more of the stuff that is used to make other stuff. Think about this with respect to energy. Russia produces around 40 per cent of Europe's natural gas, a key commodity used in electricity and heat generation. Can a service sector business remain open without access to this energy? Obviously not. A high street retailer, for example, would not be able to function without electricity. Now put the shoe on the other foot: can an energy provider continue to produce energy if all the high street retailers closed their doors? Of course.
+\href{https://thecritic.co.uk/the-wests-self-defeating-sanctions/}{Pilkington (2022) The West's self-defeating sanctions}
 \end{quote}
 
 \hypertarget{our-besda-economy}{%
