--- a/recs.tex
+++ b/recs.tex
@@ -82,7 +82,7 @@
 
 \title{Economics}
 \author{Dyrehaugen Web Notebook}
-\date{2022-07-01}
+\date{2022-07-14}
 
 \begin{document}
 \maketitle
@@ -95,6 +95,10 @@
 \chapter{Economics}\label{economics}}
 
 \includegraphics{fig/zelda.jpg}
+
+\begin{quote}
+\textbf{Economics is the study of the conversion of energy to fight entropy.}
+\end{quote}
 
 \begin{quote}
 Economics is a reductionist carve-out of commodifiable pieces of the larger complex systems of society and ecology.
@@ -844,6 +848,29 @@ can adequately harness the consequences.
 
 \href{https://bothbrainsrequire\%20d.com/2021/10/25/fix-that-fails/}{Austin (2021) Market-led Sustainability is a `Fix that Fails'\ldots{}}
 \href{pdf/Austin_2021_Market_Led_Sustainability_Fix_Fails.pdf}{(pdf)}
+
+\hypertarget{experimental-economics}{%
+\chapter{Experimental Economics}\label{experimental-economics}}
+
+\emph{Investopedia}
+
+Experimental economics is used to help understand how and why markets function the way they do. These market experiments, involving real people making real choices, are a way of testing whether theoretical economic models actually describe market behavior, and provide insights into the power of markets and how participants respond to incentives---usually cash.
+
+The field was pioneered by Vernon Smith.
+
+Experimental economics is mainly concerned with testing in a laboratory setting with appropriate controls to remove the effects of external influences. Participants in an experimental economics study are assigned the roles of buyers and sellers and rewarded with the trading profits they earn during the experiment.
+
+The promise of a reward acts as a natural incentive for participants to make rational decisions in their self-interest. During the experiment, researchers constantly modify rules and incentives in order to record participant behavior in changed circumstances.
+
+Smith's early experiments focused on theoretical equilibrium prices and how they compared to real-world equilibrium prices. He found that even though humans suffer from cognitive biases, traditional economics can still make accurate predictions about the behavior of groups of people. Groups with biased behavior and limited information still reach the equilibrium price by becoming smarter through their spontaneous interaction.
+
+The applications of experimental economics can be seen in various policy decisions. For example, the design of carbon trading emissions schemes has benefitted from experiments conducted by economists in different regions of the world in a laboratory setting.
+
+\href{https://www.investopedia.com/terms/e/experimental-economics.asp}{Investopedia: Experiemental Economics}
+
+\emph{Nobel}
+
+\href{pdf/Nobel_2002_Kahneman_and_Smith.pdf}{Nobel (2002) Kahneman and Smith (pdf)}
 
 \hypertarget{economic-growth}{%
 \chapter{Economic Growth}\label{economic-growth}}
@@ -1777,6 +1804,26 @@ One of the main problems with the planetary boundaries' framework, however, is t
 
 \hypertarget{econophysics}{%
 \chapter{Econophysics}\label{econophysics}}
+
+\emph{Jovanovic}
+
+Although financial
+economics and mathematical finance still largely dominate modern financial
+theory, in the past few years a new player has increasingly been making itself
+felt, and could lead to a rethinking of some of the theoretical foundations of
+modern financial theory. This new player is econophysics.
+
+This article makes three contributions to the history of
+modern financial theory: an analysis of the theoretical foundations of
+econophysics (and their connections with the history of financial economics); a
+study of the reasons underlying the emergence of econophysics; and a
+presentation of the manner in which econophysics has become the third
+component of modern financial theory.
+
+Econophysics' major distinguishing feature is the use of pure Lévy processes.
+
+\href{https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3294565}{Jovanovic (2013) History of Econophysics' Emergence}
+\href{pdf/Jovanovic_2013_Econophysics_History.pdf}{(pdf)}
 
 \emph{Blair Fix}
 
@@ -3400,6 +3447,125 @@ Unfortunately, the reaction of the mainstream was less enlightened: rather than 
 
 \href{https://evonomics.com/why-economists-have-to-embrace-complexity-steve-keen/}{Steve Keen}
 
+\hypertarget{game-theory}{%
+\chapter{Game Theory}\label{game-theory}}
+
+\begin{quote}
+Vintage game theorists is the best kind of economist (and some of the macroeconomists do even sometimes interpret their models as mean-field games)
+(Beatrice Cherrier)
+\end{quote}
+
+\hypertarget{nash-equilibrium}{%
+\section{Nash Equilibrium}\label{nash-equilibrium}}
+
+\emph{Investopedia}
+
+Nash equilibrium is a concept within game theory where the optimal outcome of a game is where there is no incentive to deviate from the initial strategy. More specifically, the Nash equilibrium is a concept of game theory where the optimal outcome of a game is one where no player has an incentive to deviate from their chosen strategy after considering an opponent's choice.1
+
+Overall, an individual can receive no incremental benefit from changing actions, assuming other players remain constant in their strategies. A game may have multiple Nash equilibria or none at all.
+
+Nash equilibrium is often compared alongside dominant strategy, both being strategies of game theory. The Nash equilibrium states that the optimal strategy for an actor is to stay the course of their initial strategy while knowing the opponent's strategy and that all players maintain the same strategy, as long as all other players do not change their strategy.
+
+Dominant strategy asserts that the chosen strategy of an actor will lead to better results out of all the possible strategies that can be used, regardless of the strategy that the opponent uses.
+
+All models of game theory only work if the players involved are ``rational agents,'' meaning that they desire specific outcomes, operate in attempting to choose the most optimal outcome, incorporate uncertainty in their decisions, and are realistic in their options.
+
+Both the terms are similar but slightly different. Nash equilibrium states that nothing is gained if any of the players change their strategy if all other players maintain their strategy. Dominant strategy asserts that a player will choose a strategy that will lead to the best outcome regardless of the strategies that other plays have chosen. Dominant strategy can be included in Nash equilibrium whereas a Nash equilibrium may not be the best strategy in a game.
+
+The prisoner's dilemma is a common situation analyzed in game theory that can employ the Nash equilibrium. In this game, two criminals are arrested and each is held in solitary confinement with no means of communicating with the other. The prosecutors do not have the evidence to convict the pair, so they offer each prisoner the opportunity to either betray the other by testifying that the other committed the crime or cooperate by remaining silent.
+
+If both prisoners betray each other, each serves five years in prison. If A betrays B but B remains silent, prisoner A is set free and prisoner B serves 10 years in prison or vice versa. If each remains silent, then each serves just one year in prison.
+
+The Nash equilibrium in this example is for both players to betray each other. Even though mutual cooperation leads to a better outcome if one prisoner chooses mutual cooperation and the other does not, one prisoner's outcome is worse.
+
+The primary limitation of the Nash equilibrium is that it requires an individual to know their opponent's strategy. A Nash equilibrium can only occur if a player chooses to remain with their current strategy if they know their opponent's strategy.
+
+\href{https://www.investopedia.com/terms/n/nash-equilibrium.asp}{Investopedia}
+
+\hypertarget{mean-field-game-theory-mfg}{%
+\section{Mean-Field Game Theory (MFG)}\label{mean-field-game-theory-mfg}}
+
+\emph{Kaust}
+
+In the theory of mean-field games (MFG), the concept of Nash
+equilibrium and the rational expectation hypothesis are combined to
+produce mathematical models for large systems, with infinitely many
+indistinguishable rational players.
+
+While not all economists agree that the behavior of agents can be reduced
+to a precise mathematical formulation, utility maximization principles
+and game-theoretical equilibria explain, at least partially, many
+economic phenomena.
+
+The concept of competing agents is illustrated in the works of A.
+Cournot and L. Walras. Indeed, Walras, also known as the founder
+of the École de Lausanne, refers to Cournot in 1873, as the first au-
+thor to seriously recur to the mathematical formalism in investigating
+economic problems. Cournot duopoly model is one of the earliest for-
+mulations of a non-cooperative game.
+
+The term \emph{indistinguishable} refers
+to a setting where agents share common structures of the model,
+though they are allowed to have heterogeneous states. In other terms,
+the MFG theory enables us to investigate the solution concept of Nash
+equilibrium, for a large population of heterogeneous agents, under the
+hypothesis of rational expectations.
+
+The mean-field game formalism was developed in a series of semi-
+nal papers by J.-M. Lasry and P.-L. Lions {[}118, 119, 120{]} and M.
+Huang, R. Malhamé and P. Caines {[}103, 106{]}. It comprises methods
+and techniques to study differential games with a large population of
+rational players. These agents have preferences not only about their
+state (e.g., wealth, capital) but also on the distribution of the remain-
+ing individuals in the population. Mean-field games theory studies
+generalized Nash equilibria for these systems. Typically, these mod-
+els are formulated in terms of partial differential equations, namely a
+transport or Fokker-Plank equation for the distribution of the agents
+coupled with a Hamilton-Jacobi equation.
+
+The mean-field game formalism was developed in a series of semi-
+nal papers by J.-M. Lasry and P.-L. Lions {[}118, 119, 120{]} and M.
+Huang, R. Malhamé and P. Caines {[}103, 106{]}. It comprises methods
+and techniques to study differential games with a large population of
+rational players. These agents have preferences not only about their
+state (e.g., wealth, capital) but also on the distribution of the remain-
+ing individuals in the population. Mean-field games theory studies
+generalized Nash equilibria for these systems. Typically, these mod-
+els are formulated in terms of partial differential equations, namely a
+transport or Fokker-Plank equation for the distribution of the agents
+coupled with a Hamilton-Jacobi equation.
+
+MFG methods are equilibrium models where all agents are
+rational. In simple problems, fundamental questions such as unique-
+ness, existence or stability were investigated extensively. However,
+many MFG problems arising in mathematical economics raise issues
+that cannot be dealt with the current results.
+
+In this book, we have attempted to illustrate the main techniques
+and methods in mean-field games theory, in several simplified models
+motivated by economic considerations.
+
+\href{pdf/Kaust_2015_Mean-field_Games.pdf}{Kaust (2015) Economic Models and Mean-field Games (pdf)}
+
+\href{https://www.economicshelp.org/university/game-theory/}{Economicshelp: Examples of Game Theory in Economics}
+
+\hypertarget{mechanism-design}{%
+\section{Mechanism Design}\label{mechanism-design}}
+
+\emph{Investopedia}
+
+Mechanism design is a branch of microeconomics that explores how businesses and institutions can achieve desirable social or economic outcomes given the constraints of individuals' self-interest and incomplete information. When individuals act in their own self-interest, they may not be motivated to provide accurate information, creating principal-agent problems.
+
+Mechanism design theory generally takes a reverse approach to game theory. It studies a scenario by beginning with an outcome and understanding how entities work together to achieve a particular outcome.
+
+Both game theory and design theory look at the competing and cooperative influences of entities in the process towards an outcome. Mechanism design theory considers a particular outcome and what is done to achieve it. Game theory looks at how entities can potentially influence several outcomes.
+
+\href{https://www.investopedia.com/terms/m/mechanism-design-theory.asp\#citation-1}{Investopedia}
+
+\emph{Nobel 2007}
+
+\href{pdf/Nobel_2007_Mechanism_Design.pdf}{Nobel (2007) mechnism Design}
+
 \hypertarget{inequality}{%
 \chapter{Inequality}\label{inequality}}
 
@@ -3416,6 +3582,10 @@ Stop talking about inequality, start talking about exploitation.
 
 \begin{quote}
 Inflation is about power, not money.
+\end{quote}
+
+\begin{quote}
+mainstream economists believe that elevated inflation is a result of ``excess'' aggregate demand.
 \end{quote}
 
 \hypertarget{fiscal-theory-of-price-level}{%
@@ -3663,6 +3833,12 @@ against historical cases.
 \href{https://www.sciencedirect.com/science/article/pii/S0921800921001907}{Hartley and Kallis (2021) Interest-bearing loans and unpayable debts in slow-growing economies: Insights from ten historical cases}
 \href{pdf/Hartley_Kallis_2021_Unpayable_debt.pdf}{(pdf)}
 \href{pdf/Hartley_Kallis_2021_Unpayable_debt_SI.pdf}{(SI pdf)}
+
+\hypertarget{investment}{%
+\chapter{Investment}\label{investment}}
+
+``Now, capitalists do many things as a class, but they certainly do not
+invest as a class' (Kalecki)
 
 \hypertarget{phillips-curve}{%
 \chapter{Phillips Curve}\label{phillips-curve}}
@@ -8001,6 +8177,12 @@ About half of all wheat consumed in Lebanon in 2020 came from Ukraine, according
 \hypertarget{economics-1}{%
 \chapter{Economics}\label{economics-1}}
 
+\begin{quote}
+The key question in ``History of economics'' should be: how was it possible for this field to get it so wrong?
+\end{quote}
+
+\href{https://twitter.com/Undercoverhist/status/1545446586024591361}{Peters - Cherrier tweet exchange}
+
 \hypertarget{economics-is-pseudo-science}{%
 \section{Economics is Pseudo-Science}\label{economics-is-pseudo-science}}
 
@@ -8309,6 +8491,20 @@ the exercise circular.
 
 \href{https://harvardlawreview.org/2014/12/the-laws-of-capitalism/}{Grewal (2014) Review of Piketty}
 \href{pdf/Grewal_2014_laws_of_Capitalism.pdf}{(full pdf)}
+
+\emph{Alves}
+
+In Marx's view, once the rate of exploitation is given, the rate of profit is derived
+from it, followed by the wage rate. If one asks what determines the wage rate, one
+must ask what determines the rate of exploitation first. In this way, the rate of
+exploitation takes us to the forces underlying class struggle in capitalism and thus
+outside the system of price and technology.
+
+For Robinson, Marx's concept of surplus value---and the related idea of exploitation---
+is the most striking difference between Marx and orthodox economics.
+
+\href{https://www.aeaweb.org/articles?id=10.1257/jep.36.2.247}{Alves (2022) Joan Robinson on Karl Marx: ``His Sense of Reality Is Far Stronger''}
+\href{pdf/Alves_2022_Joan_Robinson_on_Karl_Marx.pdf}{(pdf)}
 
 \hypertarget{pierro-sraffa}{%
 \section{Pierro Sraffa}\label{pierro-sraffa}}
