--- a/recs.tex
+++ b/recs.tex
@@ -82,7 +82,7 @@
 
 \title{Economics}
 \author{Dyrehaugen Web Notebook}
-\date{2022-07-14}
+\date{2022-08-28}
 
 \begin{document}
 \maketitle
@@ -112,8 +112,14 @@ So what is modern economics about? It seems to be, mainly, about \emph{itself}.
 
 The `science' of maximizing and minimizing stuff you can't measure.
 
+Perhaps the best definition of economics is that it is `secular theology'.
+Economics adopts the veneer of science, but, like theology, is based on untestable definitions. The most pervasive dualism is the equivalence between income and productivity.
+\href{https://economicsfromthetopdown.com/2022/08/10/dualism-in-science-theology-and-economics/}{Fix (2022) Dualism}
+
 The cult of math modl-ing.
 \href{pdf/Thomas_Palley_2106_Life_among_the_Econ_50yrs.pdf}{Palley (2021) Life among the Econs - 50 years on (pdf)}
+
+Never underestimate economists' ability to convince themselves that the world works in a way that's convenient for their equations!
 
 The failure of economics to cultivate the sustained acceptance of externalities is increasingly
 becoming the most pertinent fact about the whole discipline. Not only did economics -- the `science
@@ -185,6 +191,36 @@ That `logic' is the entrenched norm of market primacy, to which Western cultures
 
 \href{https://channelmcgilchrist.com/articles/the-matrix-of-the-emissary/}{Austin (2021) The Matrix of the Emissary - Market Primacy and The Sustainability Cris\\
 is}
+
+\hypertarget{duality}{%
+\chapter{Duality}\label{duality}}
+
+Perhaps the best definition of economics is that it is `secular theology'.
+Economics adopts the veneer of science, but, like theology, is based on untestable definiti\\
+ons.
+
+The most pervasive dualism is the equivalence between income and productivity.
+We have a logical problem with the productivity-income duality. Either it is correct but unnecessary, or it is both unnecessary and incorrect. Either way, the duality is unsound.
+
+Of course, there is nothing wrong with having a hypothesis that is logically unsound. It just means that when you notice the problem, you should abandon the hypothesis. But that's not what happened in economics. Instead, the income-productivity duality became the basis for the entire system of national accounts.
+
+To address this logical problem, economists have invented more theology. Prices, they claim, are themselves a duality. Prices are both a monetary quantity and a measure of utility.
+The problem is that economists never measure utility. They infer it from prices.
+
+And so the whole operation becomes circular --- a theological definition, and nothing more. Joan Robinson nicely summarized the situation:
+
+\begin{quote}
+Utility is a metaphysical concept of impregnable circularity; utility is the quality in commodities that makes individuals want to buy them, and the fact that individuals want to buy commodities shows that they have utility.
+\end{quote}
+
+In other words, economists propose a definition, and use this definition to justify it.
+That's theology.
+
+\emph{Assumptions}
+
+When people like Milton Friedman spout theological nonsense, they'll try to convince you that assumptions don't matter. Friedman notoriously claimed that if a theory gives `correct predictions', that's good enough. Don't believe him. Assumptions are the most basic part of science. If they are wrong, the whole theory is garbage.
+
+\href{https://economicsfromthetopdown.com/2022/08/10/dualism-in-science-theo\%20logy-and-economics/}{Fix (2022) Dualism}
 
 \hypertarget{economic-rent}{%
 \chapter{Economic Rent}\label{economic-rent}}
@@ -875,6 +911,15 @@ The applications of experimental economics can be seen in various policy decisio
 \hypertarget{economic-growth}{%
 \chapter{Economic Growth}\label{economic-growth}}
 
+\hypertarget{degrowth}{%
+\section{Degrowth}\label{degrowth}}
+
+\emph{Phillips}
+
+Rather than viewing the market's irrational production as the source of environmental challenges, the degrowth position views the source to be economic growth.
+
+\href{https://www.opendemocracy.net/en/oureconomy/degrowth-delusion/}{Phillips (2022) The degrowth delusion}
+
 \hypertarget{growth-without-economic-growth}{%
 \section{Growth without Economic Growth}\label{growth-without-economic-growth}}
 
@@ -1442,6 +1487,27 @@ We can have a democratic economy organized around meeting human needs at a high 
 
 \href{https://twitter.com/jasonhickel/status/1536656134001643527}{Hickel (2022) Twitter thread}
 \href{https://threadreaderapp.com/thread/1536656134001643527.html}{ThreadReader}
+
+\hypertarget{productivism}{%
+\chapter{Productivism}\label{productivism}}
+
+\emph{Rodrik}
+
+There are signs of a major reorientation toward an economic policy framework that is rooted in production, work, and localism instead of finance, consumerism, and globalism. It might just turn into a new policy model that captures imaginations across the political spectrum.
+
+A new bipartisan consensus may be emerging around ``productivism,'' which emphasizes the dissemination of productive economic opportunities throughout all regions and all segments of the labor force. Unlike neoliberalism, productivism gives governments and civil society a significant role in achieving that goal. It puts less faith in markets, is suspicious of large corporations, and emphasizes production and investment over finance, and revitalizing local communities over globalization.
+
+Productivism also departs from the Keynesian welfare state by focusing less on redistribution, social transfers, and macroeconomic management and more on supply-side measures to create good jobs for everyone. And productivism diverges from both of its antecedents by reflecting greater skepticism toward technocrats and expressing less knee-jerk hostility to economic populism.
+
+Examples include the embrace of industrial policies to facilitate the green transition, rebuild domestic supply chains, and stimulate good jobs; blaming large corporate profits as a culprit behind inflation, and refusing (so far) to revoke former President Donald Trump's tariffs against China. When the administration's most senior economist, Secretary of the Treasury Janet Yellen, extols the virtues of ``friend-shoring'' -- sourcing supplies from US allies -- over the World Trade Organization, we know the times are changing.
+
+In those instances in which the market's most efficient outcome is one that's bad for our people what we need is targeted industrial policy to further the common good.
+
+``State capacity'' is one of its main planks, emphasizing that governments' ability to provide public goods is important for a healthy economy.
+
+``Pro-worker policies'' and ``the encouragement, through government policy, of domestic production.''
+
+\href{https://www.project-syndicate.org/commentary/new-productivism-economic-policy-paradigm-by-dani-rodrik-2022-07}{Rodrik (2022) Productivism}
 
 \hypertarget{steady-state-economics-sse}{%
 \chapter{Steady State Economics (SSE)}\label{steady-state-economics-sse}}
@@ -3753,6 +3819,21 @@ I don't think it is pejorative to describe the use of the term ``price controls'
 But as desirable as that kind of heterodox challenge may be in general terms, we will be kidding ourselves if we imagine that such measures are a ``powerful weapon'' to fight the spike in prices in 2022.
 
 \href{https://adamtooze.substack.com/p/top-links-65-inflation-and-price}{Tooze (2022) Inflation \& Price Controls}
+
+\hypertarget{greedflation}{%
+\section{Greedflation}\label{greedflation}}
+
+\emph{Fix}
+
+big business is systematically benefiting from inflation, it implies that these big corporations are raising prices faster than everyone else. In other words, it is oligopolies that are driving inflation.
+
+\includegraphics{fig/bn_inflation_markup_crop.png}
+
+\emph{Figure: Inflation benefits big business}
+
+Inflation looks nothing like it does in economics textbooks. Yes, inflation is a `monetary phenomenon' --- as is anything to do with prices. But more importantly, inflation is a power struggle over who can raise prices the fastest.
+
+\href{https://evonomics.com/the-truth-about-inflation-why-milton-friedman-was-wrong-again/}{Fix (2022) The Truth About Inflation: Why Milton Friedman Was Wrong, Again}
 
 \hypertarget{innovation}{%
 \chapter{Innovation}\label{innovation}}
@@ -7042,6 +7123,8 @@ lines. R2\_adj is the coefficient of determination, adjusted for the number of p
 \hypertarget{economic-measurements}{%
 \chapter{Economic Measurements}\label{economic-measurements}}
 
+\includegraphics{fig/Tree_GDP.jpeg}
+
 \begin{quote}
 GDP is insufficient as a measure to capture what is essential about the economy.
 \end{quote}
@@ -7738,6 +7821,13 @@ One more thing to mention is that HARMONEY does not use an aggregate production 
 
 \href{https://economicsfromthetopdown.com/2021/03/05/a-review-of-carey-kings-the-economic-superorganism/}{Fix on King `Superorganism'}
 
+\hypertarget{input-output}{%
+\section{Input-Output}\label{input-output}}
+
+Technology matrices (IO tables) theoretically capture the conditions of production. Most presentations counterfactually assume they are constant (e.g.~constant returns to scale). However, once the matrices are allowed to vary with demand then they capture market value too.
+
+\href{https://twitter.com/ianpaulwright/status/1552159460277239810}{Ian Wright (tweet)}
+
 \hypertarget{agent-based-macro}{%
 \chapter{Agent Based Macro}\label{agent-based-macro}}
 
@@ -7955,6 +8045,15 @@ That the US administration is now leading the push for an ambitious global minim
 With the confirmation of this new narrative, it seems likely that what is left undone in the OECD process will be resolved through a combination of unilateral and UN action.
 
 \href{https://www.taxjustice.net/2021/04/07/us-treasury-secretary-yellen-confirms-its-time-to-end-the-race-to-the-bottom-on-corporate-tax/}{Global Corporate Minimum Tax}
+
+\textbf{The Missing Profits of Nations}
+
+\emph{Tørsløv Abstract}
+
+By exploiting new macroeconomic data known as foreign affiliates statistics, we show that affiliates of foreign multinational firms are an order of magnitude more profitable than local firms in a number of low-tax countries. Leveraging this differential profitability, we estimate that 36\% of multinational profits are shifted to tax havens globally. U.S. multinationals shift twice as much profit as other multinationals relative to the size of their foreign earnings. We analyze how the location of corporate profits would change if shifted profits were reallocated to their source countries. Domestic profits would increase by about 20\% in high-tax European Union countries, 10\% in the United States, and 5\% in developing countries, while they would fall by 55\% in tax havens. We provide a new international database of GDP, trade balances, and factor shares corrected for profit shifting. In contrast to the picture painted by official statistics, our results suggest that the corporate capital share has increased not only in North America but also in high-tax European countries. Capital is making a comeback globally, but its rise is obscured by the tax avoidance strategies of multinational companies.
+
+\href{https://www.restud.com/paper/the-missing-profits-of-nations/}{Tørsløv (2022) The Missing Profits of Nations}
+\href{pdf/Torslov_2022_The_Missing_Profits_of_Nations.pdf}{(pdf)}
 
 \hypertarget{welfare}{%
 \chapter{Welfare}\label{welfare}}
@@ -8229,6 +8328,11 @@ Bayesian statistics is up front about the subjective element of judging a hypoth
 As physicist Sabine Hossenfelder shows in her book \emph{Lost in Math}, the appeal to aesthetics leads scientists astray more often than it leads them to the truth.
 
 \href{https://economicsfromthetopdown.com/2021/07/02/essentialism-and-traditionalism-in-academic-research/}{Kyger and Fix (2021) Essentialism and Traditionalism in Academic Research}
+
+\hypertarget{the-invisible-hand}{%
+\section{The Invisible Hand}\label{the-invisible-hand}}
+
+``Yes, there was an `invisible hand,'\,'' Stephen Cohen and Brad DeLong write in their history of the topic, Concrete Economics. ``But the invisible hand was repeatedly lifted at the elbow by the government, and placed in a new position from where it could go on to perform its magic.''
 
 \hypertarget{economic-goods-and-services}{%
 \section{Economic Goods and Services}\label{economic-goods-and-services}}
@@ -8757,6 +8861,22 @@ The world has indeed got richer, but any such shift in morals and values is hard
 The study of hunter-gatherers, who live for the day and do not accumulate surpluses, shows that humanity can live more or less as Keynes suggests. It's just that we're choosing not to. A key to that lost or forsworn ability, Suzman suggests, lies in the ferocious egalitarianism of hunter-gatherers.
 
 \href{https://www.newyorker.com/magazine/2017/09/18/the-case-against-civilization}{Lanchester (2017) The Case against Civilization}
+
+\emph{Tankus on Keynes}
+
+In the General Theory, Keynes focuses on defining and refining his idea of ``Effective Demand''. The key difference between aggregate demand and effective demand --- and the most important element for our purposes --- is that effective demand refers to the expectations of ``entrepreneurs''. Effective demand is not simply the actual sums of money being spent, or preparing to be spent, ``out there''. In our world, we can simply think of the expectations of firms rather than ``entrepreneurs''. If those in charge of firms are pessimistic about future sales, effective demand will be low. That's true regardless of the factors impacting aggregate demand.
+
+Of course, in the immediate future, it is hard to imagine this kind of mismatch sustaining itself. If a firm doesn't produce because it expects its products to remain unsold, the sales and market share growth of its competitors will likely change its tune. It does not, after all, take all that much to restart production that has been recently mothballed (abstracting from sudden bottlenecks of key inputs).
+
+Keynes understood this point well, which is why he divided expectations into two types. ``Short term'' expectations referred to the expectation that a firm can sell what it can produce with the plant and equipment it already controls. ``Long term'' expectations are ``concerned with what the entrepreneur {[}firm{]} can hope to earn in the shape of future returns if he purchases (or, perhaps, manufactures) `finished' output as an addition to his capital equipment''. In other words, long term expectations relate to whether the sales will be there to make building more capacity, or even an entire new factory, worth it.
+
+Here lies the issue. Keynes highlights that: ``The actually realised results of the production and sale of output will only be relevant to employment in so far as they cause a modification of subsequent expectation''. If sales growth in 2021 or 2022 doesn't lead to expectations of higher sales in 2027 and 2028, businesses have no reason to invest in plant and equipment with multi-year, perhaps even multi-decade, lifespans.
+
+Now it is likely that years upon years of annual sales growth could eventually align ``short term'' and ``long term'' expectations. However, that would take quite a long time. This possibility is also being currently closed by the Federal Reserve. Chairman Powell is doing his best to validate business expectations that effective demand has not increased by lowering aggregate demand today. In a sense, interest rate policy is closing the gap by perversely lowering short term expectations until they are in line with long term expectations. Even more perversely, their very unwillingness to invest in new capacity has contributed to the elevated CPI readings, which have led to elite pressure on the Federal Reserve to lower inflation through choking demand.
+
+If we can't quickly break through pessimistic expectations that are lowering ``long term effective demand'' by boosting ``short term effective demand'', we need to either directly invest in additional capacity or insure firms against negative surprises in the future.
+
+\href{https://www.crisesnotes.com/is-insuring-the-oil-and-gas-industry-the-right-response-to-the-fallout-from-ukraine/}{Tankus (2022) Insuring The Oil and Gas Industry}
 
 \hypertarget{paul-romer}{%
 \section{Paul Romer}\label{paul-romer}}
